--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,13 @@ code {
   padding: 0;
   box-sizing: border-box;
 }
+
+a {
+  display: inline-block;
+  text-decoration: none;
+  color: inherit;
+}
+
+img {
+  display: block;
+}
