--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,18 @@ code {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
+  &::-webkit-scrollbar {
+    width: 16px;
+  }
+  &::-webkit-scrollbar-track {
+    margin-block: 4px;
+  }
+  &::-webkit-scrollbar-thumb {
+    background: #848484;
+    border: 4px solid #191919;
+    border-radius: 100vw;
+  }
 }
 
 a {
@@ -28,4 +40,24 @@ a {
 
 img {
   display: block;
+}
+
+button {
+  display: inline-block;
+  border: 0;
+  outline: 0;
+  font-family: inherit;
+  cursor: pointer;
+}
+
+input {
+  display: block;
+  border: 0;
+  outline: 0;
+  font-family: inherit;
+  color: inherit;
+}
+
+ul {
+  list-style: none;
 }
